Test out some additional patterns
